--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ jaxtyping>=0.2.25
 
 # Fairness & Bias Detection
 fairlearn>=0.10.0
-aequitas>=2.0.0
+aequitas>=1.0.0
 scikit-learn>=1.3.0
 
 # Visualization
@@ -54,11 +54,13 @@ spacy>=3.7.0
 rouge-score>=0.1.2
 
 # Jupyter Support (for Colab)
-jupyter>=1.0.0
-ipython>=8.18.0
-notebook>=7.0.0
+# Note: Colab already has jupyter/ipython pre-installed
+# jupyter>=1.0.0
+# ipython>=8.0.0
+# notebook>=6.5.0
 
 # Code Quality (optional, for development)
-black>=23.12.0
-flake8>=7.0.0
-pytest>=7.4.0
+# Uncomment if needed for local development
+# black>=23.12.0
+# flake8>=7.0.0
+# pytest>=7.4.0
